// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example Proof: vanilla-spa-basic > should match Development snapshots (Identity keys) > vanilla-spa-basic/dev-transforms/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vanilla TS - Zintl SPA Example</title>
  <!--zintl-bootstrap-->
    <script id="zintl-projection">
      (function() {
        const lang = new URLSearchParams(window.location.search).get("lang") || "en";
        const l = lang || localStorage.getItem('zintl-locale') || 'en';
        const rtl = ["ar"];
        const deltas = {"ar":{"title":"فانيلا تي إس - مثال SPA مع زينتل"},"es":{"title":"Vanilla TS - Ejemplo de SPA con Zintl"},"zh":{"title":"Vanilla TS - 带有 Zintl 的 SPA 示例"}};
        const originals = {
          title: document.title,
        };
        function apply(locale) {
          if (document.documentElement.lang === locale) return;
          document.documentElement.dir = rtl.includes(locale) ? 'rtl' : 'ltr';
          document.documentElement.lang = locale;
          const hasText = v => typeof v === "string" && v.trim();
          const delta = deltas[locale];
          if (delta) {
            document.title = hasText(delta.title)
              ? delta.title
              : originals.title;
          } else {
            document.title = originals.title;
          }
        }
        window.__zintlApplyHtml = apply;
        if (l !== 'en') {
          apply(l);
        }
      })();
    </script>
  </head>
  <body>
    <div id="app"></div>
    <script type="module" src="/src/main.ts"></script>
  </body>
</html>"
`;

exports[`Example Proof: vanilla-spa-basic > should match Development snapshots (Identity keys) > vanilla-spa-basic/dev-transforms/src/counter.ts 1`] = `
"import { _t } from "zintl/internal";
import _zintl_mgr_b_src_main_render from "virtual:zintl/manager/none/entry:b_src_main_render";
export function setupCounter(element: HTMLButtonElement) {
  let counter = 0;
  const setCounter = (count: number) => {
    counter = count;
    element.innerHTML = _t("Count is {counter}", { counter: counter }, { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_counter_setupCounter" });
  };
  element.addEventListener("click", () => setCounter(counter + 1));
  setCounter(0);
}"
`;

exports[`Example Proof: vanilla-spa-basic > should match Development snapshots (Identity keys) > vanilla-spa-basic/dev-transforms/src/main.ts 1`] = `
"import { _t, loadI18nInstance } from "zintl/internal";
import _zintl_mgr_b_src_main_render from "virtual:zintl/manager/none/entry:b_src_main_render";
import "./style.css";
import typescriptLogo from "./assets/typescript.svg";
import viteLogo from "./assets/vite.svg";
import heroImg from "./assets/hero.png";
import { setupCounter } from "./counter.ts";

import { setupSwitcher } from "./switcher.ts";
import iconsSvg from "./assets/icons.svg?raw";

// Inject the sprite once to prevent reloads on innerHTML updates
const iconsDiv = document.createElement("div");
iconsDiv.id = "__icons__";
iconsDiv.style.display = "none";
iconsDiv.innerHTML = iconsSvg;
document.body.insertBefore(iconsDiv, document.body.firstChild);

async function render() {
  const lang = new URLSearchParams(window.location.search).get("lang") || "en";
  await loadI18nInstance({ locale: lang, loaders: { ["b_src_main_render"]: _zintl_mgr_b_src_main_render.loader } });

  document.querySelector<HTMLDivElement>("#app")!.innerHTML = \`
<section id="header">
  <div id="switcher" class="switcher"></div>
  <div class="vertical-ticks"></div>
  <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="#translate-icon"></use></svg></div>
</section>

<div class="ticks"></div>

<section id="center">
  <div class="hero">
    <img src="\${heroImg}" class="base" width="170" height="179">
    <img src="\${typescriptLogo}" class="framework" alt="TypeScript logo"/>
    <img src="\${viteLogo}" class="vite" alt="Vite logo" />
  </div>
  <div>
    <h1>\${_t("Get started", { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_main_render" })}</h1>
    <p>\${_t("Edit", { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_main_render" })} <!-- @zintl-ignore --> <code>src/main.ts</code> \${_t("and save to test", { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_main_render" })} <!-- @zintl-ignore --> <code>HMR</code></p>
  </div>
  <button id="counter" type="button" class="counter"></button>
</section>

<div class="ticks"></div>

<section id="next-steps">
  <div id="docs">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="#documentation-icon"></use></svg>
    <h2>\${_t("Documentation", { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_main_render" })}</h2>
    <p>\${_t("Your questions, answered", { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_main_render" })}</p>
    <ul>
      <li>
        <a href="https://vite.dev/" target="_blank">
          <img class="logo" src="\${viteLogo}" alt="" />
          \${_t("Explore Vite", { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_main_render" })}
        </a>
      </li>
      <li>
        <a href="https://www.typescriptlang.org" target="_blank">
          <img class="button-icon" src="\${typescriptLogo}" alt="">
          \${_t("Learn more", { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_main_render" })}
        </a>
      </li>
    </ul>
  </div>
  <div id="social">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="#social-icon"></use></svg>
    <h2>\${_t("Connect with us", { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_main_render" })}</h2>
    <p>\${_t("Join the Vite community", { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_main_render" })}</p>
    <!-- @zintl-ignore -->
    <ul>
      <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="#github-icon"></use></svg>GitHub</a></li>
      <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="#discord-icon"></use></svg>Discord</a></li>
      <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="#x-icon"></use></svg>X.com</a></li>
      <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="#bluesky-icon"></use></svg>Bluesky</a></li>
    </ul>
  </div>
</section>

<div class="ticks"></div>
<section id="spacer"></section>
\`;

  setupCounter(document.querySelector<HTMLButtonElement>("#counter")!);
  setupSwitcher(document.querySelector<HTMLDivElement>("#switcher")!, (newLang) => {
    const url = new URL(window.location.href);
    url.searchParams.set("lang", newLang);
    window.history.pushState({}, "", url);
    void render();
  });
}

void render();"
`;

exports[`Example Proof: vanilla-spa-basic > should match Development snapshots (Identity keys) > vanilla-spa-basic/dev-transforms/src/switcher.ts 1`] = `
"export function setupSwitcher(element: HTMLElement, onSwitch: (lang: string) => void) {
  const lang = new URLSearchParams(window.location.search).get("lang") || "en";

  const locales = [
    { id: "en", name: "English" },
    { id: "ar", name: "العربية" },
    { id: "es", name: "Español" },
    { id: "zh", name: "中文" },
  ];

  element.innerHTML = locales
    .map(
      (l) => \`
    <!-- @zintl-ignore -->
    <button data-lang="\${l.id}" class="\${lang === l.id ? "active" : ""}">
      \${l.name}
    </button>
  \`,
    )
    .join("");

  element.querySelectorAll("button").forEach((btn) => {
    btn.addEventListener("click", () => {
      const newLang = (btn as HTMLElement).dataset.lang!;
      onSwitch(newLang);
    });
  });
}"
`;

exports[`Example Proof: vanilla-spa-basic > should match Development snapshots (Identity keys) > vanilla-spa-basic/dev-transforms/virtual:zintl/content/ar/entry:b_src_main_render 1`] = `
"export default {
    "b_src_main_render": {
      "Get started": "ابدأ الآن",
      "Edit": "عدّل",
      "and save to test": "واحفظ لاختبار",
      "Documentation": "وثائق",
      "Your questions, answered": "إجابات لأسئلتك",
      "Explore Vite": "استكشف Vite",
      "Learn more": "تعرف على المزيد",
      "Connect with us": "تواصل معنا",
      "Join the Vite community": "انضم إلى مجتمع Vite",
    },
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`العدد هو \${params['counter']}\`;
  },
    },
  };"
`;

exports[`Example Proof: vanilla-spa-basic > should match Development snapshots (Identity keys) > vanilla-spa-basic/dev-transforms/virtual:zintl/content/es/entry:b_src_main_render 1`] = `
"export default {
    "b_src_main_render": {
      "Get started": "Empezar",
      "Edit": "Editar",
      "and save to test": "y guarda para probar",
      "Documentation": "Documentación",
      "Your questions, answered": "Tus preguntas, respondidas",
      "Explore Vite": "Explorar Vite",
      "Learn more": "Leer más",
      "Connect with us": "Conéctate con nosotros",
      "Join the Vite community": "Únete a la comunidad de Vite",
    },
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`La cuenta es \${params['counter']}\`;
  },
    },
  };"
`;

exports[`Example Proof: vanilla-spa-basic > should match Development snapshots (Identity keys) > vanilla-spa-basic/dev-transforms/virtual:zintl/content/zh/entry:b_src_main_render 1`] = `
"export default {
    "b_src_main_render": {
      "Get started": "开始使用",
      "Edit": "编辑",
      "and save to test": "并保存以测试",
      "Documentation": "文档",
      "Your questions, answered": "你的问题，已有答案",
      "Explore Vite": "探索 Vite",
      "Learn more": "了解更多",
      "Connect with us": "联系我们",
      "Join the Vite community": "加入 Vite 社区",
    },
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`计数为 \${params['counter']}\`;
  },
    },
  };"
`;

exports[`Example Proof: vanilla-spa-basic > should match Development snapshots (Identity keys) > vanilla-spa-basic/dev-transforms/virtual:zintl/manager/none/entry:b_src_main_render 1`] = `
"export default { id: "b_src_main_render", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_main_render": {
      "Get started": "Get started",
      "Edit": "Edit",
      "and save to test": "and save to test",
      "Documentation": "Documentation",
      "Your questions, answered": "Your questions, answered",
      "Explore Vite": "Explore Vite",
      "Learn more": "Learn more",
      "Connect with us": "Connect with us",
      "Join the Vite community": "Join the Vite community",
    },
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`Count is \${params['counter']}\`;
  },
    },
  };
                case "ar":
          return import("virtual:zintl/content/ar/entry:b_src_main_render").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/entry:b_src_main_render").then(m => m.default);
        case "zh":
          return import("virtual:zintl/content/zh/entry:b_src_main_render").then(m => m.default);
        default: return {};
      }
    } };"
`;

exports[`Example Proof: vanilla-spa-basic > should match Final Production Build (dist) snapshots > vanilla-spa-basic/dist/assets/entry_b_ae1e7cbb2f74-7Tm-N5f6.js 1`] = `
"//#region \\0virtual:zintl/content/ar/entry:b_ae1e7cbb2f74
var entry_b_ae1e7cbb2f74_default = {
	"b_ae1e7cbb2f74": {
		"90e40d50": "ابدأ الآن",
		"5301648d": "عدّل",
		"f7a53867": "واحفظ لاختبار",
		"9e9cf322": "وثائق",
		"d0f7666b": "إجابات لأسئلتك",
		"e49cb0ee": "استكشف Vite",
		"824d76b1": "تعرف على المزيد",
		"65ac13a7": "تواصل معنا",
		"15545bc4": "انضم إلى مجتمع Vite"
	},
	"b_f05b8e5701f3": { "3aaf6932": (params) => {
		const { counter } = params;
		return \`العدد هو \${params["counter"]}\`;
	} }
};
//#endregion
export { entry_b_ae1e7cbb2f74_default as default };
"
`;

exports[`Example Proof: vanilla-spa-basic > should match Final Production Build (dist) snapshots > vanilla-spa-basic/dist/assets/entry_b_ae1e7cbb2f74-BJxz-AbQ.js 1`] = `
"//#region \\0virtual:zintl/content/zh/entry:b_ae1e7cbb2f74
var entry_b_ae1e7cbb2f74_default = {
	"b_ae1e7cbb2f74": {
		"90e40d50": "开始使用",
		"5301648d": "编辑",
		"f7a53867": "并保存以测试",
		"9e9cf322": "文档",
		"d0f7666b": "你的问题，已有答案",
		"e49cb0ee": "探索 Vite",
		"824d76b1": "了解更多",
		"65ac13a7": "联系我们",
		"15545bc4": "加入 Vite 社区"
	},
	"b_f05b8e5701f3": { "3aaf6932": (params) => {
		const { counter } = params;
		return \`计数为 \${params["counter"]}\`;
	} }
};
//#endregion
export { entry_b_ae1e7cbb2f74_default as default };
"
`;

exports[`Example Proof: vanilla-spa-basic > should match Final Production Build (dist) snapshots > vanilla-spa-basic/dist/assets/entry_b_ae1e7cbb2f74-DA0Ic4CM.js 1`] = `
"//#region \\0virtual:zintl/content/es/entry:b_ae1e7cbb2f74
var entry_b_ae1e7cbb2f74_default = {
	"b_ae1e7cbb2f74": {
		"90e40d50": "Empezar",
		"5301648d": "Editar",
		"f7a53867": "y guarda para probar",
		"9e9cf322": "Documentación",
		"d0f7666b": "Tus preguntas, respondidas",
		"e49cb0ee": "Explorar Vite",
		"824d76b1": "Leer más",
		"65ac13a7": "Conéctate con nosotros",
		"15545bc4": "Únete a la comunidad de Vite"
	},
	"b_f05b8e5701f3": { "3aaf6932": (params) => {
		const { counter } = params;
		return \`La cuenta es \${params["counter"]}\`;
	} }
};
//#endregion
export { entry_b_ae1e7cbb2f74_default as default };
"
`;

exports[`Example Proof: vanilla-spa-basic > should match Final Production Build (dist) snapshots > vanilla-spa-basic/dist/assets/index-DIEDaxqC.js 1`] = `
"//#region \\0vite/modulepreload-polyfill.js
(function polyfill() {
	const relList = document.createElement("link").relList;
	if (relList && relList.supports && relList.supports("modulepreload")) return;
	for (const link of document.querySelectorAll("link[rel=\\"modulepreload\\"]")) processPreload(link);
	new MutationObserver((mutations) => {
		for (const mutation of mutations) {
			if (mutation.type !== "childList") continue;
			for (const node of mutation.addedNodes) if (node.tagName === "LINK" && node.rel === "modulepreload") processPreload(node);
		}
	}).observe(document, {
		childList: true,
		subtree: true
	});
	function getFetchOpts(link) {
		const fetchOpts = {};
		if (link.integrity) fetchOpts.integrity = link.integrity;
		if (link.referrerPolicy) fetchOpts.referrerPolicy = link.referrerPolicy;
		if (link.crossOrigin === "use-credentials") fetchOpts.credentials = "include";
		else if (link.crossOrigin === "anonymous") fetchOpts.credentials = "omit";
		else fetchOpts.credentials = "same-origin";
		return fetchOpts;
	}
	function processPreload(link) {
		if (link.ep) return;
		link.ep = true;
		const fetchOpts = getFetchOpts(link);
		fetch(link.href, fetchOpts);
	}
})();
//#endregion
//#region packages/runtime/dist/internal.mjs
var I18nStore = class {
	locale = "";
	catalogs = {};
	debug = typeof process !== "undefined" && {}.ZINTL_DEBUG === "true" || false;
	pendingBoundaries = /* @__PURE__ */ new Set();
	listeners = /* @__PURE__ */ new Set();
	constructor() {
		if (typeof document !== "undefined" && document.documentElement) this.locale = document.documentElement.lang || "";
		if (!this.locale && typeof window !== "undefined") try {
			this.locale = localStorage.getItem("zintl-locale") || "";
		} catch {}
	}
	subscribe(listener) {
		this.listeners.add(listener);
		return () => this.listeners.delete(listener);
	}
	notify() {
		this.listeners.forEach((l) => l());
	}
	addCatalogs(newCatalogs) {
		let changed = false;
		for (const [locale, boundaries] of Object.entries(newCatalogs)) {
			if (!this.catalogs[locale]) this.catalogs[locale] = {};
			for (const [boundaryId, messages] of Object.entries(boundaries)) {
				if (!this.catalogs[locale][boundaryId]) this.catalogs[locale][boundaryId] = {};
				for (const [key, value] of Object.entries(messages)) if (this.catalogs[locale][boundaryId][key] !== value) {
					this.catalogs[locale][boundaryId][key] = value;
					changed = true;
				}
			}
		}
		if (changed) this.notify();
	}
	async setLocale(locale) {
		if (!locale) return;
		if (typeof window !== "undefined") {
			if (window.__zintlApplyHtml) window.__zintlApplyHtml(locale);
			try {
				localStorage.setItem("zintl-locale", locale);
			} catch {}
		}
		if (this.locale === locale && Object.keys(this.catalogs[locale] || {}).length > 0) return;
		this.locale = locale;
		const activePromises = [];
		for (const [boundaryId, loader] of globalRegistry.entries()) try {
			const result = loader(locale);
			const processResult = (res) => {
				if (!res) return;
				this.addCatalogs({ [locale]: res });
			};
			if (isThenable(result)) {
				this.pendingBoundaries.add(boundaryId);
				activePromises.push(result.then((res) => {
					processResult(res);
					this.pendingBoundaries.delete(boundaryId);
				}));
			} else processResult(result);
		} catch (err) {}
		if (activePromises.length > 0) {
			await Promise.all(activePromises);
			this.notify();
		} else this.notify();
	}
	registerLoader(boundaryId, loader) {
		const result = loader(this.locale);
		const processResult = (res) => {
			if (!res) return;
			this.addCatalogs({ [this.locale]: res });
		};
		if (isThenable(result)) {
			this.pendingBoundaries.add(boundaryId);
			return result.then((res) => {
				processResult(res);
				this.pendingBoundaries.delete(boundaryId);
			});
		} else processResult(result);
	}
};
var globalRegistry = /* @__PURE__ */ new Map();
var currentInstance = new I18nStore();
function getActiveInstance() {
	return currentInstance;
}
function setActiveInstance(instance) {
	currentInstance = instance;
}
function registerLoader(boundaryId, loader) {
	if (!globalRegistry.has(boundaryId)) globalRegistry.set(boundaryId, loader);
	const instance = getActiveInstance();
	try {
		const result = loader(instance.locale);
		const processResult = (res) => {
			if (!res) return;
			instance.addCatalogs({ [instance.locale]: res });
		};
		if (isThenable(result)) return result.then((res) => {
			processResult(res);
		});
		else processResult(result);
	} catch (err) {}
}
function isThenable(obj) {
	return obj && typeof obj.then === "function";
}
function _t(key, params = {}, options) {
	const instance = getActiveInstance();
	const catalogs = instance.catalogs;
	const locale = instance.locale;
	const effectiveParams = options ? {
		...params,
		...options
	} : params;
	const mgr = effectiveParams._mgr;
	const boundaryId = mgr?.id;
	const targetBId = effectiveParams._bId || boundaryId;
	const boundaryCatalog = targetBId ? catalogs[locale]?.[targetBId] : void 0;
	const message = boundaryCatalog ? boundaryCatalog[key] : void 0;
	if (message === void 0) {
		if (mgr) {
			instance.registerLoader(mgr.id, mgr.loader);
			return \`\`;
		}
		return \`\`;
	}
	if (typeof message === "function") return message(params);
	if (typeof message !== "string") return "";
	const { _mgr, _bId, ...restParams } = effectiveParams;
	return interpolate(message, restParams);
}
function interpolate(message, params) {
	if (message === null || message === void 0) return "";
	return String(message).replace(/\\{(\\w+)\\}/g, (match, key) => {
		return params[key]?.toString() ?? match;
	});
}
/**
* Loads and configures the i18n instance for a boundary.
* Registers loaders and merges new catalogs into the existing state.
*
* INTERNAL: Targeted by the compiler after zintl() macro expansion.
*/
async function loadI18nInstance(config = {}) {
	const store = new I18nStore();
	setActiveInstance(store);
	try {
		if (config.debug !== void 0) store.debug = config.debug;
		if (config.locale) store.locale = config.locale;
		if (config.catalogs) store.addCatalogs(config.catalogs);
		if (config.loaders) for (const [boundaryId, loader] of Object.entries(config.loaders)) registerLoader(boundaryId, loader);
		if (config.locale) await store.setLocale(config.locale);
	} finally {}
	return {
		locale: store.locale,
		get debug() {
			return store.debug;
		},
		set debug(value) {
			store.debug = value;
		},
		setLocale: (l) => store.setLocale(l),
		subscribe: (cb) => store.subscribe(cb),
		t: (key, params) => {
			const prev = getActiveInstance();
			setActiveInstance(store);
			try {
				return _t(key, params);
			} finally {
				setActiveInstance(prev);
			}
		}
	};
}
//#endregion
//#region \\0vite/preload-helper.js
var scriptRel = "modulepreload";
var assetsURL = function(dep) {
	return "/" + dep;
};
var seen = {};
var __vitePreload = function preload(baseModule, deps, importerUrl) {
	let promise = Promise.resolve();
	if (deps && deps.length > 0) {
		const links = document.getElementsByTagName("link");
		const cspNonceMeta = document.querySelector("meta[property=csp-nonce]");
		const cspNonce = cspNonceMeta?.nonce || cspNonceMeta?.getAttribute("nonce");
		function allSettled(promises) {
			return Promise.all(promises.map((p) => Promise.resolve(p).then((value) => ({
				status: "fulfilled",
				value
			}), (reason) => ({
				status: "rejected",
				reason
			}))));
		}
		promise = allSettled(deps.map((dep) => {
			dep = assetsURL(dep, importerUrl);
			if (dep in seen) return;
			seen[dep] = true;
			const isCss = dep.endsWith(".css");
			const cssSelector = isCss ? "[rel=\\"stylesheet\\"]" : "";
			if (!!importerUrl) for (let i = links.length - 1; i >= 0; i--) {
				const link = links[i];
				if (link.href === dep && (!isCss || link.rel === "stylesheet")) return;
			}
			else if (document.querySelector(\`link[href="\${dep}"]\${cssSelector}\`)) return;
			const link = document.createElement("link");
			link.rel = isCss ? "stylesheet" : scriptRel;
			if (!isCss) link.as = "script";
			link.crossOrigin = "";
			link.href = dep;
			if (cspNonce) link.setAttribute("nonce", cspNonce);
			document.head.appendChild(link);
			if (isCss) return new Promise((res, rej) => {
				link.addEventListener("load", res);
				link.addEventListener("error", () => rej(/* @__PURE__ */ new Error(\`Unable to preload CSS for \${dep}\`)));
			});
		}));
	}
	function handlePreloadError(err) {
		const e = new Event("vite:preloadError", { cancelable: true });
		e.payload = err;
		window.dispatchEvent(e);
		if (!e.defaultPrevented) throw err;
	}
	return promise.then((res) => {
		for (const item of res || []) {
			if (item.status !== "rejected") continue;
			handlePreloadError(item.reason);
		}
		return baseModule().catch(handlePreloadError);
	});
};
//#endregion
//#region \\0virtual:zintl/manager/none/entry:b_ae1e7cbb2f74
var entry_b_ae1e7cbb2f74_default = {
	id: "b_ae1e7cbb2f74",
	loader: (locale) => {
		switch (locale) {
			case "en": return {
				"b_ae1e7cbb2f74": {
					"90e40d50": "Get started",
					"5301648d": "Edit",
					"f7a53867": "and save to test",
					"9e9cf322": "Documentation",
					"d0f7666b": "Your questions, answered",
					"e49cb0ee": "Explore Vite",
					"824d76b1": "Learn more",
					"65ac13a7": "Connect with us",
					"15545bc4": "Join the Vite community"
				},
				"b_f05b8e5701f3": { "3aaf6932": (params) => {
					const { counter } = params;
					return \`Count is \${params["counter"]}\`;
				} }
			};
			case "ar": return __vitePreload(() => import("./entry_b_ae1e7cbb2f74-7Tm-N5f6.js").then((m) => m.default), []);
			case "es": return __vitePreload(() => import("./entry_b_ae1e7cbb2f74-DA0Ic4CM.js").then((m) => m.default), []);
			case "zh": return __vitePreload(() => import("./entry_b_ae1e7cbb2f74-BJxz-AbQ.js").then((m) => m.default), []);
			default: return {};
		}
	}
};
//#endregion
//#region examples/vanilla-spa-basic/src/assets/typescript.svg
var typescript_default = "data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20aria-hidden='true'%20width='32'%20height='32'%20viewBox='0%200%20256%20256'%3e%3cpath%20fill='%23007ACC'%20d='M0%20128v128h256V0H0z'/%3e%3cpath%20fill='%23FFF'%20d='m56.612%20128.85l-.081%2010.483h33.32v94.68h23.568v-94.68h33.321v-10.28c0-5.69-.122-10.444-.284-10.566c-.122-.162-20.4-.244-44.983-.203l-44.74.122l-.121%2010.443Zm149.955-10.742c6.501%201.625%2011.459%204.51%2016.01%209.224c2.357%202.52%205.851%207.111%206.136%208.208c.08.325-11.053%207.802-17.798%2011.988c-.244.162-1.22-.894-2.317-2.52c-3.291-4.795-6.745-6.867-12.028-7.233c-7.76-.528-12.759%203.535-12.718%2010.321c0%201.992.284%203.17%201.097%204.795c1.707%203.536%204.876%205.649%2014.832%209.956c18.326%207.883%2026.168%2013.084%2031.045%2020.48c5.445%208.249%206.664%2021.415%202.966%2031.208c-4.063%2010.646-14.14%2017.879-28.323%2020.276c-4.388.772-14.79.65-19.504-.203c-10.28-1.828-20.033-6.908-26.047-13.572c-2.357-2.6-6.949-9.387-6.664-9.874c.122-.163%201.178-.813%202.356-1.504c1.138-.65%205.446-3.129%209.509-5.485l7.355-4.267l1.544%202.276c2.154%203.29%206.867%207.801%209.712%209.305c8.167%204.307%2019.383%203.698%2024.909-1.26c2.357-2.153%203.332-4.388%203.332-7.68c0-2.966-.366-4.266-1.91-6.501c-1.99-2.845-6.054-5.242-17.595-10.24c-13.206-5.69-18.895-9.224-24.096-14.832c-3.007-3.25-5.852-8.452-7.03-12.8c-.975-3.617-1.22-12.678-.447-16.335c2.723-12.76%2012.353-21.659%2026.25-24.3c4.51-.853%2014.994-.528%2019.424.569Z'/%3e%3c/svg%3e";
//#endregion
//#region examples/vanilla-spa-basic/src/assets/vite.svg
var vite_default = "/assets/vite-BF8QNONU.svg";
//#endregion
//#region examples/vanilla-spa-basic/src/assets/hero.png
var hero_default = "/assets/hero-CLDdwZDr.png";
//#endregion
//#region examples/vanilla-spa-basic/src/counter.ts
function setupCounter(element) {
	let counter = 0;
	const setCounter = (count) => {
		counter = count;
		element.innerHTML = _t("3aaf6932", { counter }, {
			_mgr: entry_b_ae1e7cbb2f74_default,
			_bId: "b_f05b8e5701f3"
		});
	};
	element.addEventListener("click", () => setCounter(counter + 1));
	setCounter(0);
}
//#endregion
//#region examples/vanilla-spa-basic/src/switcher.ts
function setupSwitcher(element, onSwitch) {
	const lang = new URLSearchParams(window.location.search).get("lang") || "en";
	element.innerHTML = [
		{
			id: "en",
			name: "English"
		},
		{
			id: "ar",
			name: "العربية"
		},
		{
			id: "es",
			name: "Español"
		},
		{
			id: "zh",
			name: "中文"
		}
	].map((l) => \`
    <!-- @zintl-ignore -->
    <button data-lang="\${l.id}" class="\${lang === l.id ? "active" : ""}">
      \${l.name}
    </button>
  \`).join("");
	element.querySelectorAll("button").forEach((btn) => {
		btn.addEventListener("click", () => {
			const newLang = btn.dataset.lang;
			onSwitch(newLang);
		});
	});
}
//#endregion
//#region examples/vanilla-spa-basic/src/assets/icons.svg?raw
var icons_default = "<svg xmlns=\\"http://www.w3.org/2000/svg\\">\\n  <symbol id=\\"bluesky-icon\\" viewBox=\\"0 0 16 17\\">\\n    <g clip-path=\\"url(#bluesky-clip)\\"><path fill=\\"#08060d\\" d=\\"M7.75 7.735c-.693-1.348-2.58-3.86-4.334-5.097-1.68-1.187-2.32-.981-2.74-.79C.188 2.065.1 2.812.1 3.251s.241 3.602.398 4.13c.52 1.744 2.367 2.333 4.07 2.145-2.495.37-4.71 1.278-1.805 4.512 3.196 3.309 4.38-.71 4.987-2.746.608 2.036 1.307 5.91 4.93 2.746 2.72-2.746.747-4.143-1.747-4.512 1.702.189 3.55-.4 4.07-2.145.156-.528.397-3.691.397-4.13s-.088-1.186-.575-1.406c-.42-.19-1.06-.395-2.741.79-1.755 1.24-3.64 3.752-4.334 5.099\\"/></g>\\n    <defs><clipPath id=\\"bluesky-clip\\"><path fill=\\"#fff\\" d=\\"M.1.85h15.3v15.3H.1z\\"/></clipPath></defs>\\n  </symbol>\\n  <symbol id=\\"discord-icon\\" viewBox=\\"0 0 20 19\\">\\n    <path fill=\\"#08060d\\" d=\\"M16.224 3.768a14.5 14.5 0 0 0-3.67-1.153c-.158.286-.343.67-.47.976a13.5 13.5 0 0 0-4.067 0c-.128-.306-.317-.69-.476-.976A14.4 14.4 0 0 0 3.868 3.77C1.546 7.28.916 10.703 1.231 14.077a14.7 14.7 0 0 0 4.5 2.306q.545-.748.965-1.587a9.5 9.5 0 0 1-1.518-.74q.191-.14.372-.293c2.927 1.369 6.107 1.369 8.999 0q.183.152.372.294-.723.437-1.52.74.418.838.963 1.588a14.6 14.6 0 0 0 4.504-2.308c.37-3.911-.63-7.302-2.644-10.309m-9.13 8.234c-.878 0-1.599-.82-1.599-1.82 0-.998.705-1.82 1.6-1.82.894 0 1.614.82 1.599 1.82.001 1-.705 1.82-1.6 1.82m5.91 0c-.878 0-1.599-.82-1.599-1.82 0-.998.705-1.82 1.6-1.82.893 0 1.614.82 1.599 1.82 0 1-.706 1.82-1.6 1.82\\"/>\\n  </symbol>\\n  <symbol id=\\"documentation-icon\\" viewBox=\\"0 0 21 20\\">\\n    <path fill=\\"none\\" stroke=\\"#aa3bff\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.35\\" d=\\"m15.5 13.333 1.533 1.322c.645.555.967.833.967 1.178s-.322.623-.967 1.179L15.5 18.333m-3.333-5-1.534 1.322c-.644.555-.966.833-.966 1.178s.322.623.966 1.179l1.534 1.321\\"/>\\n    <path fill=\\"none\\" stroke=\\"#aa3bff\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.35\\" d=\\"M17.167 10.836v-4.32c0-1.41 0-2.117-.224-2.68-.359-.906-1.118-1.621-2.08-1.96-.599-.21-1.349-.21-2.848-.21-2.623 0-3.935 0-4.983.369-1.684.591-3.013 1.842-3.641 3.428C3 6.449 3 7.684 3 10.154v2.122c0 2.558 0 3.838.706 4.726q.306.383.713.671c.76.536 1.79.64 3.581.66\\"/>\\n    <path fill=\\"none\\" stroke=\\"#aa3bff\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.35\\" d=\\"M3 10a2.78 2.78 0 0 1 2.778-2.778c.555 0 1.209.097 1.748-.047.48-.129.854-.503.982-.982.145-.54.048-1.194.048-1.749a2.78 2.78 0 0 1 2.777-2.777\\"/>\\n  </symbol>\\n  <symbol id=\\"github-icon\\" viewBox=\\"0 0 19 19\\">\\n    <path fill=\\"#08060d\\" fill-rule=\\"evenodd\\" d=\\"M9.356 1.85C5.05 1.85 1.57 5.356 1.57 9.694a7.84 7.84 0 0 0 5.324 7.44c.387.079.528-.168.528-.376 0-.182-.013-.805-.013-1.454-2.165.467-2.616-.935-2.616-.935-.349-.91-.864-1.143-.864-1.143-.71-.48.051-.48.051-.48.787.051 1.2.805 1.2.805.695 1.194 1.817.857 2.268.649.064-.507.27-.857.49-1.052-1.728-.182-3.545-.857-3.545-3.87 0-.857.31-1.558.8-2.104-.078-.195-.349-1 .077-2.078 0 0 .657-.208 2.14.805a7.5 7.5 0 0 1 1.946-.26c.657 0 1.328.092 1.946.26 1.483-1.013 2.14-.805 2.14-.805.426 1.078.155 1.883.078 2.078.502.546.799 1.247.799 2.104 0 3.013-1.818 3.675-3.558 3.87.284.247.528.714.528 1.454 0 1.052-.012 1.896-.012 2.156 0 .208.142.455.528.377a7.84 7.84 0 0 0 5.324-7.441c.013-4.338-3.48-7.844-7.773-7.844\\" clip-rule=\\"evenodd\\"/>\\n  </symbol>\\n  <symbol id=\\"social-icon\\" viewBox=\\"0 0 20 20\\">\\n    <path fill=\\"none\\" stroke=\\"#aa3bff\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.35\\" d=\\"M12.5 6.667a4.167 4.167 0 1 0-8.334 0 4.167 4.167 0 0 0 8.334 0\\"/>\\n    <path fill=\\"none\\" stroke=\\"#aa3bff\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.35\\" d=\\"M2.5 16.667a5.833 5.833 0 0 1 8.75-5.053m3.837.474.513 1.035c.07.144.257.282.414.309l.93.155c.596.1.736.536.307.965l-.723.73a.64.64 0 0 0-.152.531l.207.903c.164.715-.213.991-.84.618l-.872-.52a.63.63 0 0 0-.577 0l-.872.52c-.624.373-1.003.094-.84-.618l.207-.903a.64.64 0 0 0-.152-.532l-.723-.729c-.426-.43-.289-.864.306-.964l.93-.156a.64.64 0 0 0 .412-.31l.513-1.034c.28-.562.735-.562 1.012 0\\"/>\\n  </symbol>\\n  <symbol id=\\"x-icon\\" viewBox=\\"0 0 19 19\\">\\n    <path fill=\\"#08060d\\" fill-rule=\\"evenodd\\" d=\\"M1.893 1.98c.052.072 1.245 1.769 2.653 3.77l2.892 4.114c.183.261.333.48.333.486s-.068.089-.152.183l-.522.593-.765.867-3.597 4.087c-.375.426-.734.834-.798.905a1 1 0 0 0-.118.148c0 .01.236.017.664.017h.663l.729-.83c.4-.457.796-.906.879-.999a692 692 0 0 0 1.794-2.038c.034-.037.301-.34.594-.675l.551-.624.345-.392a7 7 0 0 1 .34-.374c.006 0 .93 1.306 2.052 2.903l2.084 2.965.045.063h2.275c1.87 0 2.273-.003 2.266-.021-.008-.02-1.098-1.572-3.894-5.547-2.013-2.862-2.28-3.246-2.273-3.266.008-.019.282-.332 2.085-2.38l2-2.274 1.567-1.782c.022-.028-.016-.03-.65-.03h-.674l-.3.342a871 871 0 0 1-1.782 2.025c-.067.075-.405.458-.75.852a100 100 0 0 1-.803.91c-.148.172-.299.344-.99 1.127-.304.343-.32.358-.345.327-.015-.019-.904-1.282-1.976-2.808L6.365 1.85H1.8zm1.782.91 8.078 11.294c.772 1.08 1.413 1.973 1.425 1.984.016.017.241.02 1.05.017l1.03-.004-2.694-3.766L7.796 5.75 5.722 2.852l-1.039-.004-1.039-.004z\\" clip-rule=\\"evenodd\\"/>\\n  </symbol>\\n  <symbol id=\\"translate-icon\\" viewBox=\\"0 0 24 24\\">\\n    <path fill=\\"none\\" stroke=\\"#aa3bff\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.35\\" d=\\"m5 8 6 6\\"/>\\n    <path fill=\\"none\\" stroke=\\"#aa3bff\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.35\\" d=\\"m4 14 6-6 2-3\\"/>\\n    <path fill=\\"none\\" stroke=\\"#aa3bff\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.35\\" d=\\"M2 5h12\\"/>\\n    <path fill=\\"none\\" stroke=\\"#aa3bff\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.35\\" d=\\"M7 2h1\\"/>\\n    <path fill=\\"none\\" stroke=\\"#aa3bff\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.35\\" d=\\"m22 22-5-10-5 10\\"/>\\n    <path fill=\\"none\\" stroke=\\"#aa3bff\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.35\\" d=\\"M14 18h6\\"/>\\n  </symbol>\\n</svg>\\n";
//#endregion
//#region examples/vanilla-spa-basic/src/main.ts
var iconsDiv = document.createElement("div");
iconsDiv.id = "__icons__";
iconsDiv.style.display = "none";
iconsDiv.innerHTML = icons_default;
document.body.insertBefore(iconsDiv, document.body.firstChild);
async function render() {
	await loadI18nInstance({
		locale: new URLSearchParams(window.location.search).get("lang") || "en",
		loaders: { ["b_ae1e7cbb2f74"]: entry_b_ae1e7cbb2f74_default.loader }
	});
	document.querySelector("#app").innerHTML = \`
<section id="header">
  <div id="switcher" class="switcher"></div>
  <div class="vertical-ticks"></div>
  <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="#translate-icon"></use></svg></div>
</section>

<div class="ticks"></div>

<section id="center">
  <div class="hero">
    <img src="\${hero_default}" class="base" width="170" height="179">
    <img src="\${typescript_default}" class="framework" alt="TypeScript logo"/>
    <img src="\${vite_default}" class="vite" alt="Vite logo" />
  </div>
  <div>
    <h1>\${_t("90e40d50", {
		_mgr: entry_b_ae1e7cbb2f74_default,
		_bId: "b_ae1e7cbb2f74"
	})}</h1>
    <p>\${_t("5301648d", {
		_mgr: entry_b_ae1e7cbb2f74_default,
		_bId: "b_ae1e7cbb2f74"
	})} <!-- @zintl-ignore --> <code>src/main.ts</code> \${_t("f7a53867", {
		_mgr: entry_b_ae1e7cbb2f74_default,
		_bId: "b_ae1e7cbb2f74"
	})} <!-- @zintl-ignore --> <code>HMR</code></p>
  </div>
  <button id="counter" type="button" class="counter"></button>
</section>

<div class="ticks"></div>

<section id="next-steps">
  <div id="docs">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="#documentation-icon"></use></svg>
    <h2>\${_t("9e9cf322", {
		_mgr: entry_b_ae1e7cbb2f74_default,
		_bId: "b_ae1e7cbb2f74"
	})}</h2>
    <p>\${_t("d0f7666b", {
		_mgr: entry_b_ae1e7cbb2f74_default,
		_bId: "b_ae1e7cbb2f74"
	})}</p>
    <ul>
      <li>
        <a href="https://vite.dev/" target="_blank">
          <img class="logo" src="\${vite_default}" alt="" />
          \${_t("e49cb0ee", {
		_mgr: entry_b_ae1e7cbb2f74_default,
		_bId: "b_ae1e7cbb2f74"
	})}
        </a>
      </li>
      <li>
        <a href="https://www.typescriptlang.org" target="_blank">
          <img class="button-icon" src="\${typescript_default}" alt="">
          \${_t("824d76b1", {
		_mgr: entry_b_ae1e7cbb2f74_default,
		_bId: "b_ae1e7cbb2f74"
	})}
        </a>
      </li>
    </ul>
  </div>
  <div id="social">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="#social-icon"></use></svg>
    <h2>\${_t("65ac13a7", {
		_mgr: entry_b_ae1e7cbb2f74_default,
		_bId: "b_ae1e7cbb2f74"
	})}</h2>
    <p>\${_t("15545bc4", {
		_mgr: entry_b_ae1e7cbb2f74_default,
		_bId: "b_ae1e7cbb2f74"
	})}</p>
    <!-- @zintl-ignore -->
    <ul>
      <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="#github-icon"></use></svg>GitHub</a></li>
      <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="#discord-icon"></use></svg>Discord</a></li>
      <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="#x-icon"></use></svg>X.com</a></li>
      <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="#bluesky-icon"></use></svg>Bluesky</a></li>
    </ul>
  </div>
</section>

<div class="ticks"></div>
<section id="spacer"></section>
\`;
	setupCounter(document.querySelector("#counter"));
	setupSwitcher(document.querySelector("#switcher"), (newLang) => {
		const url = new URL(window.location.href);
		url.searchParams.set("lang", newLang);
		window.history.pushState({}, "", url);
		render();
	});
}
render();
//#endregion
"
`;

exports[`Example Proof: vanilla-spa-basic > should match Final Production Build (dist) snapshots > vanilla-spa-basic/dist/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vanilla TS - Zintl SPA Example</title>
    <script type="module" crossorigin src="/assets/index-DIEDaxqC.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-CUFt-qr9.css">
  <!--zintl-bootstrap-->
    <script id="zintl-projection">
      (function() {
        const lang = new URLSearchParams(window.location.search).get("lang") || "en";
        const l = lang || localStorage.getItem('zintl-locale') || 'en';
        const rtl = ["ar"];
        const deltas = {"ar":{"title":"فانيلا تي إس - مثال SPA مع زينتل"},"es":{"title":"Vanilla TS - Ejemplo de SPA con Zintl"},"zh":{"title":"Vanilla TS - 带有 Zintl 的 SPA 示例"}};
        const originals = {
          title: document.title,
        };
        const preloads = {"ar":["assets/entry_b_ae1e7cbb2f74-7Tm-N5f6.js"],"zh":["assets/entry_b_ae1e7cbb2f74-BJxz-AbQ.js"],"es":["assets/entry_b_ae1e7cbb2f74-DA0Ic4CM.js"]};
        function preload(locale) {
          const urls = preloads[locale] || [];
          for (const url of urls) {
            const link = document.createElement("link");
            link.rel = "modulepreload";
            link.href = url;
            document.head.appendChild(link);
          }
        }
        function apply(locale) {
          if (document.documentElement.lang === locale) return;
          document.documentElement.dir = rtl.includes(locale) ? 'rtl' : 'ltr';
          document.documentElement.lang = locale;
          const hasText = v => typeof v === "string" && v.trim();
          const delta = deltas[locale];
          if (delta) {
            document.title = hasText(delta.title)
              ? delta.title
              : originals.title;
          } else {
            document.title = originals.title;
          }
        }
        window.__zintlApplyHtml = apply;
        if (l !== 'en') {
          apply(l);
          preload(l);
        }
      })();
    </script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`Example Proof: vanilla-spa-basic > should match Production snapshots (Baking) > vanilla-spa-basic/prod-transforms/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vanilla TS - Zintl SPA Example</title>
  <!--zintl-bootstrap-->
    <script id="zintl-projection">
      (function() {
        const lang = new URLSearchParams(window.location.search).get("lang") || "en";
        const l = lang || localStorage.getItem('zintl-locale') || 'en';
        const rtl = ["ar"];
        const deltas = {"ar":{"title":"فانيلا تي إس - مثال SPA مع زينتل"},"es":{"title":"Vanilla TS - Ejemplo de SPA con Zintl"},"zh":{"title":"Vanilla TS - 带有 Zintl 的 SPA 示例"}};
        const originals = {
          title: document.title,
        };
        function apply(locale) {
          if (document.documentElement.lang === locale) return;
          document.documentElement.dir = rtl.includes(locale) ? 'rtl' : 'ltr';
          document.documentElement.lang = locale;
          const hasText = v => typeof v === "string" && v.trim();
          const delta = deltas[locale];
          if (delta) {
            document.title = hasText(delta.title)
              ? delta.title
              : originals.title;
          } else {
            document.title = originals.title;
          }
        }
        window.__zintlApplyHtml = apply;
        if (l !== 'en') {
          apply(l);
        }
      })();
    </script>
  </head>
  <body>
    <div id="app"></div>
    <script type="module" src="/src/main.ts"></script>
  </body>
</html>"
`;

exports[`Example Proof: vanilla-spa-basic > should match Production snapshots (Baking) > vanilla-spa-basic/prod-transforms/src/counter.ts 1`] = `
"import { _t } from "zintl/internal";
import _zintl_mgr_b_ae1e7cbb2f74 from "virtual:zintl/manager/none/entry:b_ae1e7cbb2f74";
export function setupCounter(element: HTMLButtonElement) {
  let counter = 0;
  const setCounter = (count: number) => {
    counter = count;
    element.innerHTML = _t("3aaf6932", { counter: counter }, { _mgr: _zintl_mgr_b_ae1e7cbb2f74, _bId: "b_f05b8e5701f3" });
  };
  element.addEventListener("click", () => setCounter(counter + 1));
  setCounter(0);
}"
`;

exports[`Example Proof: vanilla-spa-basic > should match Production snapshots (Baking) > vanilla-spa-basic/prod-transforms/src/main.ts 1`] = `
"import { _t, loadI18nInstance } from "zintl/internal";
import _zintl_mgr_b_ae1e7cbb2f74 from "virtual:zintl/manager/none/entry:b_ae1e7cbb2f74";
import "./style.css";
import typescriptLogo from "./assets/typescript.svg";
import viteLogo from "./assets/vite.svg";
import heroImg from "./assets/hero.png";
import { setupCounter } from "./counter.ts";

import { setupSwitcher } from "./switcher.ts";
import iconsSvg from "./assets/icons.svg?raw";

// Inject the sprite once to prevent reloads on innerHTML updates
const iconsDiv = document.createElement("div");
iconsDiv.id = "__icons__";
iconsDiv.style.display = "none";
iconsDiv.innerHTML = iconsSvg;
document.body.insertBefore(iconsDiv, document.body.firstChild);

async function render() {
  const lang = new URLSearchParams(window.location.search).get("lang") || "en";
  await loadI18nInstance({ locale: lang, loaders: { ["b_ae1e7cbb2f74"]: _zintl_mgr_b_ae1e7cbb2f74.loader } });

  document.querySelector<HTMLDivElement>("#app")!.innerHTML = \`
<section id="header">
  <div id="switcher" class="switcher"></div>
  <div class="vertical-ticks"></div>
  <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="#translate-icon"></use></svg></div>
</section>

<div class="ticks"></div>

<section id="center">
  <div class="hero">
    <img src="\${heroImg}" class="base" width="170" height="179">
    <img src="\${typescriptLogo}" class="framework" alt="TypeScript logo"/>
    <img src="\${viteLogo}" class="vite" alt="Vite logo" />
  </div>
  <div>
    <h1>\${_t("90e40d50", { _mgr: _zintl_mgr_b_ae1e7cbb2f74, _bId: "b_ae1e7cbb2f74" })}</h1>
    <p>\${_t("5301648d", { _mgr: _zintl_mgr_b_ae1e7cbb2f74, _bId: "b_ae1e7cbb2f74" })} <!-- @zintl-ignore --> <code>src/main.ts</code> \${_t("f7a53867", { _mgr: _zintl_mgr_b_ae1e7cbb2f74, _bId: "b_ae1e7cbb2f74" })} <!-- @zintl-ignore --> <code>HMR</code></p>
  </div>
  <button id="counter" type="button" class="counter"></button>
</section>

<div class="ticks"></div>

<section id="next-steps">
  <div id="docs">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="#documentation-icon"></use></svg>
    <h2>\${_t("9e9cf322", { _mgr: _zintl_mgr_b_ae1e7cbb2f74, _bId: "b_ae1e7cbb2f74" })}</h2>
    <p>\${_t("d0f7666b", { _mgr: _zintl_mgr_b_ae1e7cbb2f74, _bId: "b_ae1e7cbb2f74" })}</p>
    <ul>
      <li>
        <a href="https://vite.dev/" target="_blank">
          <img class="logo" src="\${viteLogo}" alt="" />
          \${_t("e49cb0ee", { _mgr: _zintl_mgr_b_ae1e7cbb2f74, _bId: "b_ae1e7cbb2f74" })}
        </a>
      </li>
      <li>
        <a href="https://www.typescriptlang.org" target="_blank">
          <img class="button-icon" src="\${typescriptLogo}" alt="">
          \${_t("824d76b1", { _mgr: _zintl_mgr_b_ae1e7cbb2f74, _bId: "b_ae1e7cbb2f74" })}
        </a>
      </li>
    </ul>
  </div>
  <div id="social">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="#social-icon"></use></svg>
    <h2>\${_t("65ac13a7", { _mgr: _zintl_mgr_b_ae1e7cbb2f74, _bId: "b_ae1e7cbb2f74" })}</h2>
    <p>\${_t("15545bc4", { _mgr: _zintl_mgr_b_ae1e7cbb2f74, _bId: "b_ae1e7cbb2f74" })}</p>
    <!-- @zintl-ignore -->
    <ul>
      <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="#github-icon"></use></svg>GitHub</a></li>
      <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="#discord-icon"></use></svg>Discord</a></li>
      <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="#x-icon"></use></svg>X.com</a></li>
      <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="#bluesky-icon"></use></svg>Bluesky</a></li>
    </ul>
  </div>
</section>

<div class="ticks"></div>
<section id="spacer"></section>
\`;

  setupCounter(document.querySelector<HTMLButtonElement>("#counter")!);
  setupSwitcher(document.querySelector<HTMLDivElement>("#switcher")!, (newLang) => {
    const url = new URL(window.location.href);
    url.searchParams.set("lang", newLang);
    window.history.pushState({}, "", url);
    void render();
  });
}

void render();"
`;

exports[`Example Proof: vanilla-spa-basic > should match Production snapshots (Baking) > vanilla-spa-basic/prod-transforms/src/switcher.ts 1`] = `
"export function setupSwitcher(element: HTMLElement, onSwitch: (lang: string) => void) {
  const lang = new URLSearchParams(window.location.search).get("lang") || "en";

  const locales = [
    { id: "en", name: "English" },
    { id: "ar", name: "العربية" },
    { id: "es", name: "Español" },
    { id: "zh", name: "中文" },
  ];

  element.innerHTML = locales
    .map(
      (l) => \`
    <!-- @zintl-ignore -->
    <button data-lang="\${l.id}" class="\${lang === l.id ? "active" : ""}">
      \${l.name}
    </button>
  \`,
    )
    .join("");

  element.querySelectorAll("button").forEach((btn) => {
    btn.addEventListener("click", () => {
      const newLang = (btn as HTMLElement).dataset.lang!;
      onSwitch(newLang);
    });
  });
}"
`;

exports[`Example Proof: vanilla-spa-basic > should match Production snapshots (Baking) > vanilla-spa-basic/prod-transforms/virtual:zintl/content/ar/entry:b_ae1e7cbb2f74 1`] = `
"export default {
    "b_ae1e7cbb2f74": {
      "90e40d50": "ابدأ الآن",
      "5301648d": "عدّل",
      "f7a53867": "واحفظ لاختبار",
      "9e9cf322": "وثائق",
      "d0f7666b": "إجابات لأسئلتك",
      "e49cb0ee": "استكشف Vite",
      "824d76b1": "تعرف على المزيد",
      "65ac13a7": "تواصل معنا",
      "15545bc4": "انضم إلى مجتمع Vite",
    },
    "b_f05b8e5701f3": {
      "3aaf6932": (params) => {
    const { counter } = params;
    return \`العدد هو \${params['counter']}\`;
  },
    },
  };"
`;

exports[`Example Proof: vanilla-spa-basic > should match Production snapshots (Baking) > vanilla-spa-basic/prod-transforms/virtual:zintl/content/es/entry:b_ae1e7cbb2f74 1`] = `
"export default {
    "b_ae1e7cbb2f74": {
      "90e40d50": "Empezar",
      "5301648d": "Editar",
      "f7a53867": "y guarda para probar",
      "9e9cf322": "Documentación",
      "d0f7666b": "Tus preguntas, respondidas",
      "e49cb0ee": "Explorar Vite",
      "824d76b1": "Leer más",
      "65ac13a7": "Conéctate con nosotros",
      "15545bc4": "Únete a la comunidad de Vite",
    },
    "b_f05b8e5701f3": {
      "3aaf6932": (params) => {
    const { counter } = params;
    return \`La cuenta es \${params['counter']}\`;
  },
    },
  };"
`;

exports[`Example Proof: vanilla-spa-basic > should match Production snapshots (Baking) > vanilla-spa-basic/prod-transforms/virtual:zintl/content/zh/entry:b_ae1e7cbb2f74 1`] = `
"export default {
    "b_ae1e7cbb2f74": {
      "90e40d50": "开始使用",
      "5301648d": "编辑",
      "f7a53867": "并保存以测试",
      "9e9cf322": "文档",
      "d0f7666b": "你的问题，已有答案",
      "e49cb0ee": "探索 Vite",
      "824d76b1": "了解更多",
      "65ac13a7": "联系我们",
      "15545bc4": "加入 Vite 社区",
    },
    "b_f05b8e5701f3": {
      "3aaf6932": (params) => {
    const { counter } = params;
    return \`计数为 \${params['counter']}\`;
  },
    },
  };"
`;

exports[`Example Proof: vanilla-spa-basic > should match Production snapshots (Baking) > vanilla-spa-basic/prod-transforms/virtual:zintl/manager/none/entry:b_ae1e7cbb2f74 1`] = `
"export default { id: "b_ae1e7cbb2f74", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_ae1e7cbb2f74": {
      "90e40d50": "Get started",
      "5301648d": "Edit",
      "f7a53867": "and save to test",
      "9e9cf322": "Documentation",
      "d0f7666b": "Your questions, answered",
      "e49cb0ee": "Explore Vite",
      "824d76b1": "Learn more",
      "65ac13a7": "Connect with us",
      "15545bc4": "Join the Vite community",
    },
    "b_f05b8e5701f3": {
      "3aaf6932": (params) => {
    const { counter } = params;
    return \`Count is \${params['counter']}\`;
  },
    },
  };
                case "ar":
          return import("virtual:zintl/content/ar/entry:b_ae1e7cbb2f74").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/entry:b_ae1e7cbb2f74").then(m => m.default);
        case "zh":
          return import("virtual:zintl/content/zh/entry:b_ae1e7cbb2f74").then(m => m.default);
        default: return {};
      }
    } };"
`;
